  to the correct URL.  (So /projects/foo/blog -> /projects/foo/blog/)
  The specific symptom I noticed was the link to "Write a new post"
  on the front page of a project's blog (when logged in as a project
  admin, when no posts have been made yet) was incorrectly missing the
  /blog/ component of the URL.  This behavior previously existed 
  somewhere in DeliveranceVHoster.

0.4
===

Added a simple random-choice load balancer to the http proxy.

To use it for a given backend, pass in a space-separated list 
of URLs as ``remote_uri``instead of a single URL.  Assuming you
have identical applications listening at each URL, proxied
requests will be distributed across those URLs.

(The intended use is for multiple Zope servers talking to the
same ZEO client, though I guess it could also work for any of
the other applications if there was a reason.)

0.3
===

Bugs fixed
----------

* Work around a bug deeper in the stack which causes links in the
  response HTML like /foo/my.domain.com/bar/ to be rewritten as
  /foo/my.domain.com:80/bar/ if HTTP_HOST is my.domain.com:80

* Previously some proxied WordPress URLs were incorrect and resulting
  in 404s.  This is now fixed.


Features added
--------------

Added transcluder_middleware module and a ``libopencore#transcluder``
entry point for a paste.filter_factory.

If using transcluder middleware, Transcluder must be installed.

If using transcluder middleware, it should be the outermost wsgi filter
in your stack. This is because Transcluder sometimes makes internal WSGI
subrequests instead of HTTP calls, and calls its inner app.  So if you
have routing, security or anything else important outside Transcluder,
you may get strange results.

Added support for proxying to a Twirlip server. Twirlip must be
mounted on /notifications by a regular paste#urlmap (where / is then
mapped to the main libopencore composite app) and it must be wrapped
by transcluder middleware.
